# Flam_assignment101

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/azurex/flam_assignment1/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/azurex/flam_assignment1/: GLRenderer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/azurex/flam_assignment1/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json
web/src/: index.ts
